@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSLeay.
 
+1.??
+	Fixed test failure in t/local/33_x509_create_cert.t for some version of OpenSSL.
+	
 1.84 2018-01-17
 	Fixed an error in t/local/04_basic.t causing a test failure if
 	Test::Exception not installed. Reported by Joel Berger.
